Sync all content

--- a/content/resources/ids-410js13.md
+++ b/content/resources/ids-410js13.md
@@ -12,7 +12,9 @@ image_metadata:
   credit: 'Courtesy of Randall Munroe. License: CC-BY-NC.'
   image-alt: An xkcd comic showing a physicist condescendingly "solving" a complicated
     problem of another scientist.
+learning_resource_types: []
 resourcetype: Image
 title: ids-410js13.jpg
+type: OCWImage
 uid: 8d1465f8-9eaf-61f0-58e2-381d62bd1ac4
 ---
