Sync all content

--- a/content/resources/ids-410js13.md
+++ b/content/resources/ids-410js13.md
@@ -13,6 +13,7 @@ image_metadata:
   image-alt: An xkcd comic showing a physicist condescendingly "solving" a complicated
     problem of another scientist.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: ids-410js13.jpg
 uid: 8d1465f8-9eaf-61f0-58e2-381d62bd1ac4
