Sync all content

--- a/content/resources/ids-410js13.md
+++ b/content/resources/ids-410js13.md
@@ -17,4 +17,6 @@ ocw_type: OCWImage
 resourcetype: Image
 title: ids-410js13.jpg
 uid: 8d1465f8-9eaf-61f0-58e2-381d62bd1ac4
+video_metadata:
+  youtube_id: null
 ---
